--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -110,7 +110,7 @@ $border-color:                $gray-200;
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:      Georgia, -apple-system, "Nimbus Roman No9 L", "PingFang SC", "Hiragino Sans GB", "Noto Serif SC", "Microsoft Yahei", "WenQuanYi Micro Hei", "ST Heiti", sans-serif;
-$font-family-monospace:       sfmono-regular, menlo, monaco, consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-monospace:       consolas, sfmono-regular, menlo, monaco, "Liberation Mono", "Courier New", monospace;
 $font-family-base:            $font-family-sans-serif;
 // stylelint-enable value-keyword-case
 
@@ -194,3 +194,5 @@ $dropdown-config: (
 );
 
 $input-btn-focus-width:       0;
+
+$color-code-lighten: lighten($primary, 5%)
